# ml_end_to_end_proj_weekday_5_7pm

./: app.py  main.py  predictions.py  pyproject.toml  requirements.txt
notebook/: iris_model.joblib  model.ipynb
